--- a/sass/pages/_results.scss
+++ b/sass/pages/_results.scss
@@ -2,6 +2,12 @@
 
 // Parallax backgrounds for winning areas:
 
+.result-title {
+	margin-top: 1.5em;
+	text-align: center;
+	width: 100%;
+}
+
 .eevee-result {
 	background-color: purple;
 	text-align: center;
