--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -137,7 +137,7 @@ $z-layers: (
 /// @see color
 $colors: (
   white: #fff,
-  blue: #0D81C5,
+  blue: #00B2D6,
   dark-gray: #6D5236,
   medium-gray: #A65D03,
   light-gray: #ffdd99
