Added basic intro text

--- a/jade/extends/app/intro.jade
+++ b/jade/extends/app/intro.jade
@@ -1,7 +1,13 @@
-h1 Welcome to the Eevee quiz!
-h5 Don't forget Github link!
-h6 Also a way to tweet/share results??
+.home
+	h1 What Eeveelution Are You?
 
-img(src="assets/img/eeveelutions.png").full
+	p In the Pokemon franchise, Eevee is well-known for having more potential evolutions than any other. As of now, it can evolve into one of eight different Eeveelutions, as they're called. That's a lot of potential pokemon to chose from.
+	p Thankfully, this isn't about which one you should evolve your own Eevee into. It's about which one matches your personality the best in this 24-question quiz. While no one's personality is entirely one eeveelution of the other, this will at least show you which one is closest to who you are.
+	p So what're you waiting for? Click the button, answer the questions, and (hopefully) enjoy the quiz!
 
-button(ng-click="view.quizBegin = true") Start the quiz!
+	button(ng-click="view.quizBegin = true") Start!
+
+	img(src="assets/img/eeveelutions.png").full.intro-image
+
+	h5 You can find all the code for this quiz at 
+		a(href="https://github.com/maxx1128/WhatEeveelutionAreYou", target="_blank") its Github repo
