Final tweaks before production

--- a/jade/extends/app/intro.jade
+++ b/jade/extends/app/intro.jade
@@ -1,5 +1,5 @@
 .home
-	h1 What Eeveelution Are You?
+	h1 Which Eeveelution Are You?
 
 	p In the Pokemon franchise, Eevee is well-known for having more potential evolutions than any other. As of now, it can evolve into one of eight different Eeveelutions, as they're called. That's a lot of potential pokemon to chose from.
 	p Thankfully, this isn't about which one you should evolve your own Eevee into. It's about which one matches your personality the best in this 24-question quiz. While no one's personality is entirely one eeveelution of the other, this will at least show you which one is closest to who you are.
